--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
+    min-height: 95vh;
 }
 
 .productsContainer {
@@ -12,4 +13,22 @@
     grid-template-columns: repeat(4, 1fr);
     justify-content: space-between;
     align-items: start;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .productsContainer{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .productsContainer {
+        width: 100%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .page {
+        padding: 1rem;
+        flex-direction: column;
+    }
 }
