--- a/src/app/product/[id]/product.module.css
+++ b/src/app/product/[id]/product.module.css
@@ -25,7 +25,7 @@
     box-sizing: border-box;
 }
 
-.PriceBlock >button {
+.btn{
     display: none;
 }
 
@@ -53,7 +53,7 @@
         justify-content: space-between;
     }
 
-    .PriceBlock button {
+    .btn {
         display: block;
     }
 }
